# substrate

client/api/src/: in_mem.rs
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: import_queue.rs  lib.rs
client/db/src/: lib.rs
client/service/src/client/: client.rs
primitives/blockchain/src/: backend.rs
